--- a/public/responsive/wide.css
+++ b/public/responsive/wide.css
@@ -37,7 +37,6 @@ section.main article.introduction {
 nav.cloud {
   position:absolute;
   right:0px;
-  top:19px;
   letter-spacing: 1px;
 }
 
